executePipInstall fixed